tests/baselines/reference/deleteOperatorWithBooleanType.errors.txt
deleteOperatorWithBooleanType.ts(7,12): error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
deleteOperatorWithBooleanType.ts(17,31): error TS1102: 'delete' cannot be called on an identifier in strict mode.
deleteOperatorWithBooleanType.ts(17,31): error TS2703: The operand of a 'delete' operator must be a property reference.
deleteOperatorWithBooleanType.ts(20,31): error TS2703: The operand of a 'delete' operator must be a property reference.
deleteOperatorWithBooleanType.ts(21,31): error TS2703: The operand of a 'delete' operator must be a property reference.
deleteOperatorWithBooleanType.ts(24,31): error TS2790: The operand of a 'delete' operator must be optional.
deleteOperatorWithBooleanType.ts(25,31): error TS2790: The operand of a 'delete' operator must be optional.
deleteOperatorWithBooleanType.ts(26,31): error TS2703: The operand of a 'delete' operator must be a property reference.
deleteOperatorWithBooleanType.ts(27,31): error TS2703: The operand of a 'delete' operator must be a property reference.
deleteOperatorWithBooleanType.ts(30,31): error TS2703: The operand of a 'delete' operator must be a property reference.
deleteOperatorWithBooleanType.ts(30,38): error TS1102: 'delete' cannot be called on an identifier in strict mode.
deleteOperatorWithBooleanType.ts(30,38): error TS2703: The operand of a 'delete' operator must be a property reference.
deleteOperatorWithBooleanType.ts(33,8): error TS2703: The operand of a 'delete' operator must be a property reference.
deleteOperatorWithBooleanType.ts(34,8): error TS1102: 'delete' cannot be called on an identifier in strict mode.
deleteOperatorWithBooleanType.ts(34,8): error TS2703: The operand of a 'delete' operator must be a property reference.
deleteOperatorWithBooleanType.ts(35,8): error TS2703: The operand of a 'delete' operator must be a property reference.
deleteOperatorWithBooleanType.ts(36,8): error TS2703: The operand of a 'delete' operator must be a property reference.
deleteOperatorWithBooleanType.ts(37,8): error TS2790: The operand of a 'delete' operator must be optional.
deleteOperatorWithBooleanType.ts(38,8): error TS2790: The operand of a 'delete' operator must be optional.


==== deleteOperatorWithBooleanType.ts (19 errors) ====
    // delete  operator on boolean type
    declare var BOOLEAN: boolean;
    
    function foo(): boolean { return true; }
    
    class A {
        public a: boolean;
               ~
!!! error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
        static foo() { return false; }
    }
    namespace M {
        export var n: boolean;
    }
    
    var objA = new A();
    
    // boolean type var
    var ResultIsBoolean1 = delete BOOLEAN;
                                  ~~~~~~~
!!! error TS1102: 'delete' cannot be called on an identifier in strict mode.
                                  ~~~~~~~
!!! error TS2703: The operand of a 'delete' operator must be a property reference.
    
    // boolean type literal
    var ResultIsBoolean2 = delete true;
                                  ~~~~
!!! error TS2703: The operand of a 'delete' operator must be a property reference.
    var ResultIsBoolean3 = delete { x: true, y: false };
                                  ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2703: The operand of a 'delete' operator must be a property reference.
    
    // boolean type expressions
    var ResultIsBoolean4 = delete objA.a;
                                  ~~~~~~
!!! error TS2790: The operand of a 'delete' operator must be optional.
    var ResultIsBoolean5 = delete M.n;
                                  ~~~
!!! error TS2790: The operand of a 'delete' operator must be optional.
    var ResultIsBoolean6 = delete foo();
                                  ~~~~~
!!! error TS2703: The operand of a 'delete' operator must be a property reference.
    var ResultIsBoolean7 = delete A.foo();
                                  ~~~~~~~
!!! error TS2703: The operand of a 'delete' operator must be a property reference.
    
    // multiple delete  operator
    var ResultIsBoolean8 = delete delete BOOLEAN;
                                  ~~~~~~~~~~~~~~
!!! error TS2703: The operand of a 'delete' operator must be a property reference.
                                         ~~~~~~~
!!! error TS1102: 'delete' cannot be called on an identifier in strict mode.
                                         ~~~~~~~
!!! error TS2703: The operand of a 'delete' operator must be a property reference.
    
    // miss assignment operators
    delete true;
           ~~~~
!!! error TS2703: The operand of a 'delete' operator must be a property reference.
    delete BOOLEAN;
           ~~~~~~~
!!! error TS1102: 'delete' cannot be called on an identifier in strict mode.
           ~~~~~~~
!!! error TS2703: The operand of a 'delete' operator must be a property reference.
    delete foo();
           ~~~~~
!!! error TS2703: The operand of a 'delete' operator must be a property reference.
    delete true, false;
           ~~~~
!!! error TS2703: The operand of a 'delete' operator must be a property reference.
    delete objA.a;
           ~~~~~~
!!! error TS2790: The operand of a 'delete' operator must be optional.
    delete M.n;
           ~~~
!!! error TS2790: The operand of a 'delete' operator must be optional.